CWNew/force-app/main/default/objects/CW_Route__c/CW_Route__c.object-meta.xml
<CustomObject>
    <description>Determines in which route the vehicle runs</description>
    <label>Route</label>
    <nameField>
        <displayFormat>R-{MM}-{DD}-{YYYY}-{0}</displayFormat>
        <label>Route Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>