CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>CW_Departure_Time__c</fullName>
    <description>Stores Departure Time</description>
    <label>Departure Time</label>
    <required>true</required>
    <type>Time</type>
</CustomField>