CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Destination__c.field-meta.xml
<CustomField>
    <fullName>CW_Destination__c</fullName>
    <description>Stores the destination of the route</description>
    <label>To</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Cochin</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>