CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Distance_Travelled_KM__c.field-meta.xml
<CustomField>
    <fullName>CW_Distance_Travelled_KM__c</fullName>
    <description>stores the distance travelled in KM</description>
    <inlineHelpText>Please enter the distance travelled in KM</inlineHelpText>
    <label>Distance Travelled KM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>