CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>CW_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>