CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Origin__c.field-meta.xml
<CustomField>
    <fullName>CW_Origin__c</fullName>
    <label>From</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Chennai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Cochin</fullName>
            </value>
            <value>
                <fullName>Delhi</fullName>
            </value>
            <value>
                <fullName>Lucknow</fullName>
            </value>
            <value>
                <fullName>Warangal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>