CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Trip_Duration__c.field-meta.xml
<CustomField>
    <fullName>CW_Trip_Duration__c</fullName>
    <description>Enter in HH:MM format</description>
    <inlineHelpText>Enter in HH:MM format</inlineHelpText>
    <label>Trip Duration</label>
    <length>100</length>
    <type>Text</type>
</CustomField>