CWNew/force-app/main/default/objects/CW_Route__c/fields/CW_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>CW_Vehicle__c</fullName>
    <description>Stores which vehicle is used for the route</description>
    <label>Vehicle</label>
    <referenceTo>CW_Vehicle__c</referenceTo>
    <relationshipLabel>Routes</relationshipLabel>
    <relationshipName>Routes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>