CWNew/force-app/main/default/objects/CW_Route__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CW_Vehicle__c</columns>
    <columns>CW_Origin__c</columns>
    <columns>CW_Destination__c</columns>
    <columns>CW_Runs_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>